--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "project-pulse-he",
-  "private": true,
   "version": "1.0.0",
-  "description": "Advanced project and task management system in Hebrew",
+  "description": "Project Pulse HE - Advanced Project Management System in Hebrew",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "tauri": "tauri",
@@ -15,7 +13,7 @@
     "tauri:build": "tauri build"
   },
   "keywords": ["project-management", "tasks", "hebrew", "productivity", "desktop-app"],
-  "author": "Project Manager Team",
+  "author": "Project Manager Team", 
   "license": "MIT",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -47,8 +45,12 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
-    "@tauri-apps/api": "1.5.3",
-    "@tauri-apps/cli": "1.5.7",
+    "@tauri-apps/api": "^2.7.0",
+    "@tauri-apps/plugin-dialog": "^2.3.2",
+    "@tauri-apps/plugin-fs": "^2.4.1", 
+    "@tauri-apps/plugin-notification": "^2.3.0",
+    "@tauri-apps/plugin-opener": "^2.4.0",
+    "@tauri-apps/plugin-shell": "^2.3.0",
     "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
@@ -80,20 +82,21 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.11.10",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react-swc": "^3.7.2",
-    "autoprefixer": "^10.4.20",
+    "@tauri-apps/cli": "^2.7.1",
+    "@types/node": "^22.16.5",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "lovable-tagger": "^0.1.12",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^3.5.10",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.9"
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^15.15.0",
+    "lovable-tagger": "^1.1.8",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^5.4.19"
   }
 }
